# Bosch-BSEC2-Library-IDF

./: .gitmodules  CMakeLists.txt  README.md  idf_component.yml
